--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
-
+DATABASE_URL=mongodb+srv://amit:amit@cluster0.tysk0hr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+PORT=5000
+JWT_SECRET_KEY="thidvkvjsvksdhibkjdfk"
